# systemcatalyst

./: AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
specs/001-workflow-definitions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  spec.md.bak  tasks.md
specs/001-workflow-definitions/checklists/: requirements.md
src/data/: __init__.py  generator.py  schema.py  storage.py
src/service/: main.py
src/ui/: main.py
tests/: test_schema_gen.py
tests/data/: test_schema_category.py  test_schema_gen.py  test_schema_metadata.py  test_storage.py
tests/service/: test_service_main.py
tests/ui/: test_ui.py
